# turtlebot_ros_hydro

./: README.md
exploration/: CMakeLists.txt  package.xml
exploration/config/: amcl_node.xml  exploration.cfg
exploration/config/gmapping_gazebo/: gmapping.launch
exploration/config/move_base_gazebo/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  move_base.xml  move_base_robot.xml  move_base_robots.xml
exploration/config/move_base_stage/: base_local_planner_params.yaml  global_costmap_params.yaml  minimal_costmap.yaml  move_base.xml
exploration/config/robot/: robot.launch.xml  robots.launch.xml  robots_name.yaml
exploration/config/rviz_gazebo/: navigation_exploration.rviz  navigation_exploration_2_robots.rviz
exploration/config/urdf/: kobuki.urdf.xacro  kobuki_hexagons_kinect.urdf.xacro  turtlebot_library.urdf.xacro
exploration/include/exploration/: #exploration.h#  build_map.h  coordinate_conversions.h  decision_making.h  frontiers.h  vis_exploration.h
exploration/launch/: 3dsensor.launch  decision.launch  exploration.launch  exploration_stage.launch  gazebo.launch  gazebo_2_robots.launch  kobuki.launch  mapbuilding.launch  navigation_robots.launch  stage.launch  teleop.launch  view_navigation.launch
exploration/src/: #decision_making.cpp#  #odom_pub.cpp#  build_map.cpp  combine_grids.cpp  coordinate_conversions.cpp  decision_making.cpp  exploration.cpp  exploration_main.cpp  frontieres.cpp  initial_pose.cpp  main.cpp  odom_pub.cpp
exploration/worlds/: gazebo_z.world  little_willowgarage.world  stage.world
(+4 files in other folders)
